--- a/pz2/pz2/Window_zd4.xaml
+++ b/pz2/pz2/Window_zd4.xaml
@@ -14,7 +14,14 @@
             <Button x:Name="btn_result" Content="Результат" HorizontalAlignment="Left" Margin="67,317,0,0" VerticalAlignment="Top" Height="75" Width="143" Click="btn_result_Click" FontSize="18"/>
             <Button x:Name="btn_return" Content="Назад" HorizontalAlignment="Left" Margin="257,317,0,0" VerticalAlignment="Top" Height="75" Width="143" Click="btn_return_Click" FontSize="18"/>
             <TextBlock HorizontalAlignment="Left" Margin="67,40,0,0" Text="Дан массив a[1..n] и число b. Переставить числа в массиве таким образом, чтобы слева от некоторой границы стояли числа, меньшие или равные b, а справа от границы - большие или равные b." TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.044,-0.501" FontSize="16"/>
+            <TextBox  x:Name="tb_n" HorizontalAlignment="Left" Margin="67,134,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" Height="31"/>
+            <TextBox  x:Name="tb_number" HorizontalAlignment="Left" Margin="67,186,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" Height="31"/>
+            <Label x:Name="lbl_array" Content="." Margin="281,184,117,221"/>
+            <Label x:Name="lbl_mas" Content="." Margin="277,135,121,270"/>
+            <Label x:Name="lbl_mas_Copy" Content="." Margin="277,135,121,270"/>
         </Grid>
+        
+
 
     </Grid>
 </Window>
